[package]
name = "mongo-pull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
futures = "0.3.30"
mongodb = "2.8.2"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
bson = { version = "*", features = ["chrono-0_4"] }
serde_yaml = "0.9.34"
env_logger = "0.11.3"
log = "0.4.21"
clickhouse-rs = "1.1.0-alpha.1"
